--- a/package.json
+++ b/package.json
@@ -11,18 +11,9 @@
     "clean": "rimraf .next .swc out coverage",
     "lint": "next lint",
     "format": "next lint --fix && prettier '**/*.{json,yaml}' --write --ignore-path .gitignore",
-    "check-types": "tsc --noEmit --pretty && tsc --project cypress --noEmit --pretty",
+    "check-types": "tsc --noEmit --pretty",
     "test": "jest",
     "commit": "cz",
-    "cypress": "cypress open",
-    "cypress:headless": "cypress run",
-    "e2e": "start-server-and-test dev http://localhost:3000 cypress",
-    "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless",
-    "storybook": "storybook dev -p 6006",
-    "storybook:build": "storybook build",
-    "storybook:serve": "http-server storybook-static --port 6006 --silent",
-    "serve-storybook": "run-s storybook:*",
-    "test-storybook:ci": "start-server-and-test serve-storybook http://localhost:6006 test-storybook",
     "prepare": "husky install",
     "postbuild": "next-sitemap"
   },
@@ -39,18 +30,8 @@
     "@commitlint/cz-commitlint": "^17.5.0",
     "@next/bundle-analyzer": "^13.4.9",
     "@percy/cli": "^1.26.2",
-    "@percy/cypress": "^3.1.2",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@storybook/addon-essentials": "^7.0.27",
-    "@storybook/addon-interactions": "^7.0.27",
-    "@storybook/addon-links": "^7.0.27",
-    "@storybook/blocks": "^7.0.27",
-    "@storybook/nextjs": "^7.0.27",
-    "@storybook/react": "^7.0.27",
-    "@storybook/test-runner": "^0.11.0",
-    "@storybook/testing-library": "^0.2.0",
-    "@testing-library/cypress": "^9.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.3",
@@ -59,16 +40,14 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.14",
-    "commitizen": "^4.3.0",
+    "commitizen": "^1.0.3",
     "cross-env": "^7.0.3",
     "cssnano": "^6.0.1",
-    "cypress": "^12.17.1",
     "eslint": "^8.44.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-next": "^13.4.9",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.2",
     "eslint-plugin-jest-dom": "^5.0.1",
@@ -78,7 +57,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-storybook": "^0.6.12",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "eslint-plugin-testing-library": "^5.11.0",
     "eslint-plugin-unused-imports": "^2.0.0",
@@ -91,9 +69,8 @@
     "postcss": "^8.4.25",
     "prettier": "^3.0.0",
     "rimraf": "^5.0.1",
-    "semantic-release": "^19.0.5",
+    "semantic-release": "^21.0.7",
     "start-server-and-test": "^2.0.0",
-    "storybook": "^7.0.27",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5"
   },
