--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "next-js-boilerplate",
-  "version": "3.12.0",
+  "name": "wallet-explorer",
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -29,7 +29,6 @@
     "@commitlint/config-conventional": "^17.6.6",
     "@commitlint/cz-commitlint": "^17.5.0",
     "@next/bundle-analyzer": "^13.4.9",
-    "@percy/cli": "^1.26.2",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -60,17 +59,14 @@
     "eslint-plugin-tailwindcss": "^3.13.0",
     "eslint-plugin-testing-library": "^5.11.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "http-server": "^14.1.1",
     "husky": "^8.0.3",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "lint-staged": "^13.2.3",
-    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.25",
     "prettier": "^3.0.0",
     "rimraf": "^5.0.1",
     "semantic-release": "^21.0.7",
-    "start-server-and-test": "^2.0.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5"
   },
@@ -78,24 +74,5 @@
     "commitizen": {
       "path": "@commitlint/cz-commitlint"
     }
-  },
-  "release": {
-    "branches": [
-      "main"
-    ],
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/changelog",
-      [
-        "@semantic-release/npm",
-        {
-          "npmPublish": false
-        }
-      ],
-      "@semantic-release/git",
-      "@semantic-release/github"
-    ]
-  },
-  "author": "Ixartz (https://github.com/ixartz)"
+  }
 }
