--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.5",
+    "@uniswap/redux-multicall": "^1.1.8",
     "ethers": "^6.6.4",
     "next": "^13.4.9",
     "next-seo": "^6.1.0",
