--- a/.eslintrc
+++ b/.eslintrc
@@ -52,6 +52,7 @@
                 "@typescript-eslint/comma-dangle": "off", // Avoid conflict rule between Eslint and Prettier
                 "@typescript-eslint/no-shadow": "off",
                 "@typescript-eslint/consistent-type-imports": "error", // Ensure `import type` is used when it's necessary
+                "@typescript-eslint/no-use-before-define": "off",
                 "no-restricted-syntax": [
                     "error",
                     "ForInStatement",
@@ -59,6 +60,7 @@
                     "WithStatement"
                 ], // Overrides Airbnb configuration and enable no-restricted-syntax
                 "import/prefer-default-export": "off", // Named export is easier to refactor automatically
+                "import/no-cycle": "off",
                 "simple-import-sort/imports": "error", // Import configuration for `eslint-plugin-simple-import-sort`
                 "simple-import-sort/exports": "error", // Export configuration for `eslint-plugin-simple-import-sort`
                 "@typescript-eslint/no-unused-vars": "off",
@@ -75,7 +77,10 @@
                 "no-case-declarations": "off",
                 "no-plusplus": "off",
                 "no-await-in-loop": "off",
-                "no-continue": "off"
+                "no-continue": "off",
+                "no-return-assign": "off",
+                "no-nested-ternary": "off",
+                "radix": "off"
             }
         },
         // Configuration for testing
