--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
-    "react-window": "^1.8.9"
+    "react-window": "^1.8.9",
+    "redux-localstorage-simple": "^2.5.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.6",
